kubernetes/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestioncommandes-deployment
  namespace: payetonkawa-prod
  labels:
    app: gestioncommandes
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestioncommandes
  template:
    metadata:
      labels:
        app: gestioncommandes
        environment: production
    spec:
      automountServiceAccountToken: false
      containers:
        - name: gestioncommandes
          image: registry.germainleignel.com/paye-ton-kawa/gestion-commandes
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: payetonkawa-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
