kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestioncommandes-service
  namespace: payetonkawa-prod
  labels:
    environment: production
spec:
  selector:
    app: gestioncommandes
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: payetonkawa-prod
  labels:
    environment: production
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
